<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include layout="@layout/layout_common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_permission"
            android:layout_gravity="center_horizontal"
            android:textColor="#0f161e"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/permisson_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:text="@string/device_permission_location_tip"
                android:textColor="#666666"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_open_location_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:onClick="onLocation"
                android:text="@string/device_permission_location"
                android:textColor="@color/colorThemeBlue"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/permisson_ble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onBluetooth"
            android:padding="12sp"
            android:text="@string/device_permission_ble"
            android:textColor="@color/colorThemeBlue"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:textSize="@dimen/text_size_secondary"-->
        <!--android:onClick="onCanNotOpen"-->
        <!--android:textColor="@color/white"-->
        <!--android:text="@string/device_open_can_not"-->
        <!--android:background="@drawable/shape_device_reconnect"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="onConnect"
            android:padding="12sp"
            android:text="@string/device_open_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
