<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bg"
    android:background="@color/colorThemeBlue">

    <!--<com.airbnb.lottie.LottieAnimationView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:scaleType="centerCrop"-->
    <!--app:lottie_autoPlay="true"-->
    <!--app:lottie_loop="true"-->
    <!--app:lottie_fileName="bg_premium.json"-->
    <!--/>-->


    <include
        layout="@layout/layout_common_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="245dp"
        android:orientation="vertical">

        <!--<com.airbnb.lottie.LottieAnimationView-->
        <!--android:id="@+id/anim_update_loading"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="64dp"-->
        <!--android:layout_height="64dp"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--app:lottie_autoPlay="true"-->
        <!--app:lottie_loop="true"-->
        <!--app:lottie_fileName="loading.json"-->
        <!--/>-->

        <ImageView
            android:id="@+id/ic_update"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/vector_drawable_cloud_download" />

        <TextView
            android:id="@+id/tv_update_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:gravity="center_horizontal"
            android:shadowColor="#42000000"
            android:shadowDy="2"
            android:shadowRadius="12"
            android:text="@string/update_completed"
            android:textColor="@color/colorDeviceUpdateText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_update_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_vertical"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="@dimen/margin_vertical"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="7sp"
            android:text="@string/update_complete_tip"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:background="@drawable/shape_firmware_update_btn_bg"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="startUpdate"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="#6665ff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>